Fixed layout bug on tax-return component

--- a/src/components/tax-return/tax-return.scss
+++ b/src/components/tax-return/tax-return.scss
@@ -35,6 +35,7 @@
 
 @media (min-width: $media-tablet-screen-width) {
     .tax-return__container {
+        position: relative;
         display: block;
         padding: 2rem;
         min-height: initial;
